--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
+    "react-stripe-checkout": "^2.6.3",
     "sass": "^1.55.0",
     "sort-by": "^0.0.2",
     "web-vitals": "^2.1.4"
